Allow probes when pod network is not defined.
