# api/openapi-spec/swagger.json
@@ -6609,6 +6609,10 @@
       "description": "If affinity is specifies, obey all the affinity rules",
       "$ref": "#/definitions/v1.Affinity"
      },
+     "allowProbeWithNoPodNetwork": {
+      "description": "Allow probes without pod network.\nAdvanced setups may have the ability to probe network without the default Pod network.\nThis will bypass the pod network validation for probes.\n+optional",
+      "type": "boolean"
+     },
      "dnsConfig": {
       "description": "Specifies the DNS parameters of a pod.\nParameters specified here will be merged to the generated DNS\nconfiguration based on DNSPolicy.\n+optional",
       "$ref": "#/definitions/v1.PodDNSConfig"
