# pkg/virt-api/webhooks/validating-webhook/admitters/vmi-create-admitter.go
@@ -915,7 +915,7 @@ func ValidateVirtualMachineInstanceSpec(field *k8sfield.Path, spec *v1.VirtualMa
 		}
 	}
 
-	if !podNetworkInterfacePresent {
+	if !podNetworkInterfacePresent && !spec.AllowProbeWithNoPodNetwork {
 		if spec.LivenessProbe != nil {
 			causes = append(causes, metav1.StatusCause{
 				Type:    metav1.CauseTypeFieldValueInvalid,
